# ReformulateWithAI

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reformulate_moduledescription.py
.github/workflows/: docker-image.yml
reformulator/: LICENSE  __init__.py  __main__.py  cli.py  config.py  core.py  gesform_export_formation_prod_20250925.csv  gesform_export_formation_prod_20250925_rewritten.csv  io_csv.py  logging_conf.py  main.py  openai_client.py  progress.py  pyproject.toml  reformulate_moduledescription.py  reqs.txt
reformulator/tests/: test_reformulate_moduledescription.py
tests/: test_core.py  test_io_csv.py  test_openai_client.py
